Fix footer spacing
Fix padding on bottom of footer to fix layout issues on iPhone.

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ a, a:hover {
 /** Shared Footer **/
 #ks-footer-row {
 	font-size: 0.625rem;
+	margin-bottom: 5%;
 }
 
 /* About Page */
@@ -74,6 +75,7 @@ Bootstrap Responsive Media Queries
 	#ks-header-title {
 		width: 100%;
 		text-align: center;
+		padding-top: 3px;
 	}
 	#ks-header-menu {
 		display: flex;
